<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/test_menu_home"
        android:icon="@drawable/ic_font"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/bottom_nav_home"/>
    <item
        android:id="@+id/test_menu_favorite"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/bottom_nav_favorite"/>
    <item
        android:id="@+id/test_menu_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/bottom_nav_delete"/>

</menu>